/* ========================= eCAL LICENSE =================================
 *
 * Copyright (C) 2016 - 2019 Continental Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 *      http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * ========================= eCAL LICENSE =================================
*/

syntax = "proto3";

import "ecal/core/pb/host.proto";
import "ecal/core/pb/process.proto";
import "ecal/core/pb/service.proto";
import "ecal/core/pb/topic.proto";

package eCAL.pb;

message LogMessage                                // eCAL monitoring log message
{
  int64                 time           =  1;      // time
  string                hname          =  2;      // host name
  int32                 pid            =  3;      // process id
  string                pname          =  4;      // process name
  string                uname          =  5;      // unit name
  int32                 level          =  6;      // message level
  string                content        =  7;      // message content
}

message Monitoring                                // eCAL monitoring information
{
  repeated Host         hosts          =  1;      // hosts
  repeated Process      processes      =  2;      // processes
  repeated Service      services       =  3;      // services
  repeated Client       clients        =  5;      // clients
  repeated Topic        topics         =  4;      // topics
}

message Logging                                   // eCAL logging information
{
  repeated LogMessage   logs           =  1;      // log messages
}
